eclipse-workspace/Surya Dev Org/src/objects/Transaction_History__c.object
<CustomObject>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferred_On__c</fullName>
        <label>Transferred On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferred to</label>
        <referenceTo>Account_Info__c</referenceTo>
        <relationshipLabel>Transaction History</relationshipLabel>
        <relationshipName>Transaction_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transferred_On__c</columns>
        <columns>Transferred_to__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Banking_List_View</fullName>
        <columns>NAME</columns>
        <columns>Transferred_to__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transferred_On__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>Banking List View</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>